2/2.2/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
        - name: front
          image: kostikorhonen/front:latest
        - name: back
          image: kostikorhonen/back:latest
