2/2.2/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
spec:
  type: ClusterIP
  selector:
    app: todo
  ports:
    - protocol: TCP
      port: 2345
      targetPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: back-svc
spec:
  type: ClusterIP
  selector:
    app: todo
  ports:
    - name: http
      protocol: TCP
      port: 2346
      targetPort: 3001
