2/2.2/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-svc
            port:
              number: 2345
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: back-svc
            port:
              number: 2346
      - path: /todo
        pathType: Prefix
        backend:
          service:
            name: back-svc
            port:
              number: 2346
